--- a/package.json
+++ b/package.json
@@ -20,13 +20,22 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/barcode-scanner": "^5.15.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.15.1",
+    "@ionic-native/http": "^5.15.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-plugin-advanced-http": "^2.2.0",
+    "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
+    "ngx-qrcode2": "0.0.9",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
+    "sockjs-client": "^1.4.0",
     "tslib": "^1.9.0",
+    "webstomp-client": "^1.2.6",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -55,5 +64,12 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-advanced-http": {},
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-geolocation": {}
+    }
+  }
 }
